Get events list by lat and lng.
